--- a/package.json
+++ b/package.json
@@ -15,16 +15,13 @@
   ],
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node scripts/exportShobdoboma.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
-    "type-check": "tsc --pretty --noEmit",
-    "prepare": "husky install",
-    "test": "jest",
-    "test:ci": "jest --ci",
-    "analyze": "ANALYZE=true pnpm build"
+    "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^14.0.4",
@@ -32,15 +29,18 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.17.15",
     "@tanstack/react-query-devtools": "^5.17.15",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.5",
     "geist": "^1.0.0",
     "lucide-react": "^0.304.0",
+    "module-alias": "^2.2.3",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
